# data-science-machine-learning-training

./: .gitignore  mlflow.db  pyproject.toml
machine-learning/desicion-trees-random-forest/: decision-tree-forest.ipynb
machine-learning/linear-regression/: linear-regression-scikit-learn.ipynb
machine-learning/logistic-regression/: aussie_rain.joblib  logistic-regression-lesson.ipynb  test_inputs.parquet  test_targets.parquet  train_inputs.parquet  train_targets.parquet  val_inputs.parquet  val_targets.parquet
machine-learning/logistic-regression/breast-cancer-prediction-model/: breast-cancer-pred-model.ipynb
machine-learning/ml-ops/project-1/: mlflow.db  run_deployment_pipeline.py  run_pipeline.py
machine-learning/ml-projects-approach/: ml-project-approach.md
machine-learning/project/: ml-project.ipynb
machine-learning/reinforcement-learning/: reinforcement-learning.ipynb
machine-learning/unsupervised-learning/: anomaly-detection.ipynb  recommendation-systems-algorithms.ipynb
mlruns/0/: meta.yaml
scikit-learn-course/gradient-boosting-machines/: gradient-boosting.ipynb
scikit-learn-course/project/: ml-project.ipynb
scikit-learn-course/unsupervised-learning/: anomaly-detection.ipynb  recommendation-systems-algorithms.ipynb  unsupervised-learning.ipynb
uni-course/spotify-data-project/notebooks/: 01_schema_and_eda.ipynb  02_cleaning_and_rules.ipynb  03_features_targets_and_modeling.ipynb  03_modeling_tables_build.ipynb.ipynb  04_targets_and_feature_matrices.ipynb  04_tuning_and_robustness.ipynb  05_model_training_and_reports.ipynb  TODOs.md  models.md  (+2 more)
(+76 files in other folders)
