[project]
name = "data-science"
version = "0.1.0"
description = "DS Course"
requires-python = ">=3.13"
dependencies = [
    "cufflinks>=0.17.3",
    "graphviz>=0.21",
    "imblearn>=0.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.7",
    "mdutils>=1.8.0",
    "nbformat>=5.10.4",
    "nltk>=3.9.2",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "opendatasets>=0.1.22",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "plotly>=6.3.1",
    "pyarrow>=21.0.0",
    "pyjanitor>=0.31.0",
    "python-docx>=1.2.0",
    "scikit-learn>=1.7.2",
    "scipy-stubs==1.16.3.1",
    "scrapy>=2.13.3",
    "seaborn>=0.13.2",
    "selenium>=4.38.0",
    "shap>=0.49.1",
    "statsmodels>=0.14.5",
    "tensorflow>=2.20.0",
    "wordcloud>=1.9.4",
    "xgboost>=3.1.2",
]
